@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.55 2005/07/09 14:57:08 adam Exp $
+# $NetBSD: Makefile,v 1.56 2005/09/24 21:00:25 rillig Exp $
 
 DISTNAME=	WindowMaker-0.92.0
 PKGNAME=	${DISTNAME:S/WindowMaker/windowmaker/}
+PKGREVISION=	1
 CATEGORIES=	x11 wm windowmaker
 MASTER_SITES=	ftp://ftp.windowmaker.org/pub/source/release/ \
 		ftp://ftp.ics.es.osaka-u.ac.jp/mirrors/WindowMaker/source/release/
@@ -22,6 +23,9 @@ CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFBASEDIR}
 CONFIGURE_ARGS+=	--with-nlsdir=${PREFIX}/${PKGLOCALEDIR}/locale
 CONFIGURE_ENV+=		LINGUAS=yes
 CONFIGURE_ENV+=		CPP_PATH="${CPP}"
+.if ${MACHINE_ARCH} != "i386"
+CONFIGURE_ENV+=		ac_cv_c_inline_asm=no
+.endif
 
 INSTALL_TARGET=		install-strip
 
